# BinaryTradeX

./: .env.binomo  .env.example  .replit  BINOMO_SETUP.md  ENVIRONMENT_VARIABLES_GUIDE.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_FIX_AR.md  binomo_service.py  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  run_binomo.py  sedNaEeTd  start.js  start_binomo.sh  vite.config.ts
attached_assets/: Pasted-import-React-useEffect-useRef-useState-from-react-import-createChart-IChartApi-ISeries-1759972207486_1759972207490.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/chart/: chart-drawing.tsx  chart-indicators.tsx  drawing-primitives.ts  interactive-drawing-tools.tsx  otc-chart.tsx  trading-chart.tsx
client/src/components/trading/: asset-list.tsx  trade-result-popup.tsx  trades-panel.tsx  trading-panel.tsx
client/src/components/ui/: asset-icon.tsx  avatar.tsx  chart.tsx  dialog.tsx  form.tsx  hover-card.tsx  logo.tsx  menubar.tsx  (+5 more)
client/src/hooks/: use-otc-market.ts  use-trade-result.ts  use-trading.ts  use-websocket.ts
client/src/pages/: admin.tsx  binomo.tsx  deposit.tsx  landing.tsx  login.tsx  mobile-trading.tsx  otc-market.tsx  profile.tsx  signup.tsx  trading.tsx  transactions.tsx
migrations/: 0000_omniscient_fallen_one.sql
migrations/meta/: 0000_snapshot.json  _journal.json
public/sounds/: loss.mp3.txt  win.mp3.txt
scripts/: fix-database.sql
server/: index.ts  market-engine.ts  routes.ts  storage.ts  vite.ts  websocket-handler.ts
shared/: schema.ts
src/: start.js
(+1 files in other folders)
