[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "binomoapi>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "requests>=2.32.5",
    "websocket-client>=1.9.0",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
    "gunicorn>=23.0.0",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "werkzeug>=3.1.3",
]
